# singarr

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  package.json  pnpm-lock.yaml
.husky/: pre-commit
.sqlx/: query-0228057edc33a42b1ef3ffdbf7e8265c81d87a939fbb5a15ca898b390b3cdc99.json  query-0bd9e3a6983ac1d7ce689eb19a3ec6bb44f912cd3c28a3e45bfefd62b8a27b10.json  query-140bc7a8ff5a9fc80d778e0b53666c5af3528373408bea3c8a33d47fb4da2606.json  query-17ac9d9752ecbb627d995519fc44849eaaafee20e5da2f64d09d91d24e9c5a47.json  query-218b038051d37cbb3a346f1c9881af0292a298c971e1315c3a65f96c9c7b0501.json  (+31 more)
api/: Cargo.toml
api/src/: args.rs  main.rs  state.rs
api/src/http/: error.rs  mod.rs
api/src/http/controllers/: album.rs  artist.rs  job.rs  lyrics.rs  mod.rs  notifier.rs  provider.rs  search.rs  settings.rs  socket.rs  stats.rs  status.rs  tasks.rs  token.rs  track.rs
api/src/http/middlewares/: auth.rs
api/src/models/: album.rs  artist.rs  event.rs  generic.rs  job.rs  lidarr.rs  lyrics.rs  mod.rs  notifier.rs  provider.rs  search.rs  settings.rs  stats.rs  status.rs  token.rs  track.rs
api/src/services/: album.rs  artist.rs  event.rs  image.rs  job.rs  jwt.rs  lidarr.rs  lyrics.rs  mod.rs  notifier.rs  provider.rs  scheduler.rs  search.rs  settings.rs  stats.rs  track.rs
api/src/utils/: audiodb.rs  checksum.rs  de.rs  lrc.rs  mod.rs
api/src/worker/: job.rs  mod.rs  provider.rs  queue.rs  score.rs
api/src/worker/jobs/: clean_album.rs  import_lyrics.rs  mod.rs  remove_album.rs  remove_artist.rs  remove_track.rs  scan_album.rs  scan_artist.rs  scan_library.rs  scan_track.rs  search_album.rs  search_artist.rs  search_library.rs  search_track.rs  sync_album.rs  sync_album_metadata.rs  sync_artist.rs  sync_artist_metadata.rs  sync_library.rs  sync_track.rs
api/src/worker/notifiers/: discord.rs
api/src/worker/providers/: lrclib.rs
docker/: nginx.conf  start.sh
http/: job.http  (+6 more)
(+134 files in other folders)
