[package]
name = "singarr-api"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
dotenv = "0.15.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive", "env"] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde_qs = "0.15.0"
md5 = "0.8.0"
async-trait = "0.1.89"
strsim = "0.11.1"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"
rand = "0.9.2"
webp = "0.3.1"
image = "0.25.9"
tokio-cron-scheduler = "0.15.1"
uuid = "1.19.0"
